# libbye

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Embed.cmake
ext/: CMakeLists.txt
ext/compressor/: CMakeLists.txt  fpaq0.cpp  fpaq0.h
ext/embed-resource/: CMakeLists.txt  embedresource.cpp  resource.h
parse/: CMakeLists.txt  main.cpp
parse/templates/: header.h  proxy_header_template.h  proxy_source_template.cpp  shm.cpp
testapp/: CMakeLists.txt  main.cpp
testlib/: CMakeLists.txt  main.cpp  test.cpp
